# SimOhen

./: CMakeLists.txt  main.cpp
Class/: Biotop.cpp  Biotop.h  Simulacia.h
Server/: CMakeLists.txt  active_socket.c  active_socket.h  buffer.h  char_buffer.c  char_buffer.h  linked_list.h  main.c  passive_socket.c  passive_socket.h
